ros_workspace/log/build_2020-12-02_05-19-37/ralph_py/stderr.log
  File "/home/propp/Independent_Study/ros_workspace/install/ralph_py/lib/python3.8/site-packages/ralph_py/ralph.py", line 43
    max_width = img_width+2*max_added_width
    ^
SyntaxError: invalid syntax

